--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,21 +5,20 @@
         <div class="login">
             <div class="fil1 rotate"></div>
             <div class="fil2 rotate"></div>
-            <form  #loginForm="ngForm" (ngSubmit)="login()">
-            <h3 class="title">Inicia sesion<span class="point">.</span></h3>
+            <form  #form="ngForm" (ngSubmit)="login()">
+            <h2 class="title">Bienvenido</h2>
             <div class="textinput">
                 <label for="user" class="sr-only"></label>
                 <input class="ti" type="text" name="user" id="user" [(ngModel)]="loginData.Email" #user="ngModel"
-                placeholder="Usuario" autocomplete="username"
-                required>
+                placeholder="Usuario" autocomplete="username" [required]="true">
             </div>
             <p *ngIf="user.invalid && (user.dirty || user.touched)" class="error">Este campo es requerido</p>
             <div class="textinput">
                 <label for="email" class="sr-only"></label>
-                <input class="ti" type="password" name="password" id="password" placeholder="Contraseña"
+                <input class="ti" type="password" name="password" [required]="true" id="password" placeholder="Contraseña"
                 autocomplete="current-password" required minlength="6" [(ngModel)]="loginData.Password"  #password="ngModel">
             </div>
-            <button  type="submit" [disabled]="loginForm.invalid" class="logbtn">Explora</button>
+            <button  type="submit" [disabled]="form.invalid" class="logbtn">Explora</button>
             <p *ngIf="errorLogin()" class="myerror">Error al iniciar sesion</p>
             <div class="forgot">
                 <p>¿Todavía no tenés una cuenta? - <a [routerLink]="['/register']" routerLinkActive="router-link-active" >Registrate</a></p>
