--- a/src/assets/forms.scss
+++ b/src/assets/forms.scss
@@ -15,8 +15,8 @@
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
 }
 
-.title{
-    font-size: 50px;
+h2{
+    font-size: 2.5rem;
     color: variables.$color-blanco-puro;
     margin-bottom: 20px;
     text-align: center;
