--- a/src/app/pages/subscriptions/subscriptions.component.html
+++ b/src/app/pages/subscriptions/subscriptions.component.html
@@ -1,5 +1,6 @@
 <div class="global">
     <div class="container">
+        
         <div class="card subFree">
             <div class="card-header">
                 <h2>Subscripcion Free</h2>
@@ -27,5 +28,13 @@
                 <button class="btn" (click)="proSubscription()">Cambiar</button>
             </div>
         </div>
+        <div class="card cancelsub">
+            <div class="card-header">
+                <h2>Cancelar suscripcion</h2>
+            </div>
+            <div class="card-body">
+                <p>Eliminar mi suscripcion</p>
+                <button class="btn" (click)="cancelSub()">Eliminar</button>
+            </div>
     </div>
 </div>
